--- a/site_libs/_site.yml
+++ b/site_libs/_site.yml
@@ -9,7 +9,7 @@ navbar:
       href: mailto:<ecw2178@cumc.columbia.edu>
     - icon: fa-github fa-lg
       href: http://github.com/EdmundWong101/
-    - icon: fa-LinkedIn fa-lg
+    - icon: fa-linkedin fa-lg
       href: https://www.linkedin.com/in/ecw2178/
 output:
   html_document:
