--- a/site_libs/_site.yml
+++ b/site_libs/_site.yml
@@ -3,14 +3,14 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
+    - text: "About me"
       href: about.html
     - icon: fa-envelope fa-lg
       href: mailto:<ecw2178@cumc.columbia.edu>
     - icon: fa-github fa-lg
       href: http://github.com/EdmundWong101/
     - icon: fa-linkedin fa-lg
-      href: https://www.linkedin.com/in/ecw2178/
+      href: http://linkedin.com/in/ecw2178
 output:
   html_document:
     theme: cerulean
