--- a/site_libs/_site.yml
+++ b/site_libs/_site.yml
@@ -8,7 +8,7 @@ navbar:
     - icon: fa-envelope fa-lg
       href: mailto:<ecw2178@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/EdmundWong101/
+      href: https://github.com/EdmundWong101/p8105_ecw2178.github.io
     - icon: fa-linkedin fa-lg
       href: http://linkedin.com/in/ecw2178
 output:
